Team members section fixed spacing and responsive issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1456,16 +1456,20 @@ aside,
   }
   .banner-area.breadcrumb-area {
     padding-top: 160px;
-    padding-bottom: 0px;
+    padding-bottom: 60px;
   }
   .banner-area.breadcrumb-area .banner-wrapper {
     text-align: left;
   }
   .banner-area.breadcrumb-area .banner-image {
-    position: static;
+    bottom: -260px;
+    right: 0px;
   }
   .banner-area.breadcrumb-area .breadcrumb-wrapper {
     bottom: -35px;
+  }
+  .banner-area.breadcrumb-area .breadcrumb-wrapper .breadcrumb {
+    margin-bottom: -50px;
   }
   .banner-area02 .banner-wrapper {
     padding-top: 0px;
@@ -1557,6 +1561,17 @@ aside,
     bottom: -85px;
     right: -10px;
   }
+  .banner-area.breadcrumb-area .banner-image {
+    bottom: -220px;
+    right: 0px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1023px) {
+  .banner-area.breadcrumb-area .banner-image {
+    bottom: -220px;
+    right: 0px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -1643,6 +1658,9 @@ aside,
   }
   .banner-area03 .banner-image .react-01 {
     right: 225px;
+  }
+  .banner-area.breadcrumb-area .banner-image {
+    position: static;
   }
 }
 
@@ -2684,6 +2702,13 @@ aside,
     font-size: 32px;
     margin-right: 15px;
   }
+  .our-teams-member {
+    flex-direction: column;
+    align-items: center;
+  }
+  .our-teams-member .member-info {
+    width: 60%;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 419px) {
@@ -2704,9 +2729,6 @@ aside,
   .our-teams .all-member .col-lg-4 {
     margin-bottom: 20px;
     margin-top: 20px;
-  }
-  .our-teams .all-member .member-info {
-    max-width: 95% !important;
   }
   .our-teams .all-member .social-links {
     display: flex;
@@ -3822,6 +3844,9 @@ aside,
   .callto-action-modifi .mask-group .mask01 {
     bottom: 28%;
   }
+  .callto-action {
+    padding: 80px 25px;
+  }
 }
 
 @media (min-width: 992px) and (max-width: 1023px) {
@@ -3941,7 +3966,6 @@ aside,
   .callto-action {
     margin: 0 30px;
     margin-top: 50px;
-    padding: 20px 25px;
   }
   .call-action-two_group.call-action_group-5 {
     right: 655px;
@@ -5335,6 +5359,13 @@ aside,
 /*  RESPONSIVE CSS START 
 /*----------------------------------------*/
 /* common devices - Sizes */
+@media (max-width: 1200px) {
+  .our-teams-member {
+    display: flex;
+    justify-content: center;
+  }
+}
+
 @media (max-width: 991px) {
   .our-team-member {
     margin-bottom: 40px;
@@ -5365,11 +5396,15 @@ aside,
   }
 }
 
+@media (min-width: 320px) and (max-width: 574px) {
+  .our-teams-member .member-info {
+    width: 90%;
+  }
+}
+
 @media (min-width: 320px) and (max-width: 419px) {
   .our-teams-member .member-info {
     position: relative;
-    width: 290px;
-    margin: auto;
   }
 }
 
@@ -7104,10 +7139,18 @@ aside,
 }
 
 @media (max-width: 575px) {
+  .profession-area {
+    padding: 120px 0px;
+  }
+  .profession-area .profession-img {
+    margin-bottom: 45px;
+  }
   .profession-area .profession-img .small-feature {
+    position: static;
     width: 180px;
     height: 130px;
     padding: 25px;
+    margin: 30px auto;
   }
   .profession-area .profession-img .small-feature .small-feature-percentage {
     margin-bottom: 10px !important;
