--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -441,15 +441,20 @@
     }
     &.breadcrumb-area {
       padding-top: 160px;
-      padding-bottom: 0px;
+      padding-bottom: 60px;
       .banner-wrapper {
         text-align: left;
       }
       .banner-image {
-        position: static;
+        bottom: -260px;
+        right: 0px;
       }
       .breadcrumb-wrapper {
         bottom: -35px;
+
+        .breadcrumb {
+          margin-bottom: -50px;
+        }
       }
     }
   }
@@ -558,7 +563,27 @@
       }
     }
   }
+  .banner-area {
+    &.breadcrumb-area {
+      .banner-image {
+        bottom: -220px;
+        right: 0px;
+      }
+    }
+  }
 }
+
+@media (min-width: 992px) and (max-width: 1023px) {
+  .banner-area {
+    &.breadcrumb-area {
+      .banner-image {
+        bottom: -220px;
+        right: 0px;
+      }
+    }
+  }
+}
+
 @media (max-width: 1024px) {
   .banner-area04 {
     .banner-wrapper {
@@ -661,6 +686,13 @@
       }
       .react-01 {
         right: 225px;
+      }
+    }
+  }
+  .banner-area {
+    &.breadcrumb-area {
+      .banner-image {
+        position: static;
       }
     }
   }
